tests/baselines/reference/heterogeneousArrayAndOverloads.errors.txt
tests/cases/compiler/heterogeneousArrayAndOverloads.ts(9,20): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/heterogeneousArrayAndOverloads.ts(9,23): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/heterogeneousArrayAndOverloads.ts(9,32): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/heterogeneousArrayAndOverloads.ts (3 errors) ====
    class arrTest {
        test(arg1: number[]);
        test(arg1: string[]);
        test(arg1: any[]) { }
        callTest() {
            this.test([1, 2, 3, 5]);
            this.test(["hi"]);
            this.test([]);
            this.test([1, 2, "hi", 5]); // Error
                       ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                          ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                                   ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
        }
    }